# arm-embedded-samples

app/: Cargo.toml
app/.cargo/: config
app/src/: .main.rs.swp  main.rs
app_log/: Cargo.toml
app_log/.cargo/: config
app_log/src/: main.rs
foo/: Cargo.toml
foo/src/: lib.rs
log/: Cargo.toml
rt/: .build.rs.swp  .link.x.swp  Cargo.toml  build.rs  link.x
rt/src/: .lib.rs.swp  lib.rs
