[package]
name = "app_log"
version = "0.1.0"
authors = ["Alfredo Yang <yang.alfredo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-semihosting = "0.3.1"
rt = { path = "../rt" }
log = { path = "../log" }
